--- a/dbVolunteer/dbVolunteer/dbVolunteer.csproj
+++ b/dbVolunteer/dbVolunteer/dbVolunteer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Face.cs" />
     <Compile Include="Foto.cs" />
     <Compile Include="HelpType.cs" />
+    <Compile Include="IUser.cs" />
     <Compile Include="Organization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubsVal.cs" />
