--- a/VolunteerWebApp/VolunteerWebApp/VolunteerWebApp.csproj
+++ b/VolunteerWebApp/VolunteerWebApp/VolunteerWebApp.csproj
@@ -244,6 +244,8 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\HelpTypeIva.cs" />
+    <Compile Include="Models\HelpTypeModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -310,6 +312,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\AddAds.cshtml" />
+    <Content Include="Views\Home\TestHelpType.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
