--- a/VolunteerWebApp/VolunteerWebApp/Web.config
+++ b/VolunteerWebApp/VolunteerWebApp/Web.config
@@ -9,10 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ConnectionVolunteerDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=searchbank.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionVolunteerDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=volunteerDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VolunteerWebApp-20161101071813.mdf;Initial Catalog=aspnet-VolunteerWebApp-20161101071813;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
